--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,12 +4,12 @@ RUN apt-get update && apt-get -y install sqlite3 && \
     groupadd -g 1100 pyuser && \
     useradd -m -s /bin/bash -u 1100 -g 1100 pyuser
 
-COPY /deploy/requirements.txt /home/pyuser
+COPY requirements.txt /home/pyuser
 WORKDIR /home/pyuser
 RUN pip install -r requirements.txt
 
 USER pyuser
-COPY ./backend /home/pyuser/backend
+COPY . /home/pyuser/backend
 WORKDIR /home/pyuser/backend
 
 CMD flask run -h 0.0.0.0 -p $PORT
